2013-01-10  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* pydb.py: Pdb stops now at a breakpoint set in one of the callers
	after an interrupt.
	* pydb.py: Pdb stops now at the next statement in the main module when
	the 'next' command has been issued. Pdb prints now a message to the
	console when the script has terminated.
	* gdb.py: Add file completion on 'shell' first argument.
	* gdb.py: Fix gdb version detection.
	* vim.py: Fix mapkeys lost in a new gdb session.

===============================================================================
2012-06-06  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py gdb.py inferior_tty.py: Add the 'inferiortty' command.
	* vim.py tty.py: Fix pyclewn terminal fails to print the output of the
	debuggee.

===============================================================================
2011-12-28  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* netbeans.py: change the RE_UNIDIFF regular expression to take into
	account that Python difflib in Python 2.7.2 and Python 3.2.2 may now omit
	"the comma and trailing value s".
	* debugger.py gdb.py gdbmi.py: Pure vim command implementations cannot be
	invoked as a 'C' parameter. Do not print twice log stream records.
	* gdb.py: Implement the ``define``, ``commands`` and ``document`` gdb
	commands.
	* debugger.py: Only map 'nbkey' when pyclewn keys are being mapped.
	* debugger.py: Fix after changing directory from vim, a second console
	is created after the first one is hidden, which causes problems when
	starting the next session with ':Pyclewn'.
	* setup.py asyncproc.py buffer.py debugger.py gdb.py netbeans.py
	posix.py vim.py: Pyclewn can debug a pyclewn gdb test case.
	* pydb.py: Fix Python issue 13183.
	* debugger.py: Fix a 'RuntimeError: dictionary changed size during
	iteration' occuring when running pdb.
	* debugger.py vim.py testsuite/*py: Use a marker in '(clewn)_console'